--- a/.azure-pipelines/generation-templates/workload-modules.yml
+++ b/.azure-pipelines/generation-templates/workload-modules.yml
@@ -54,11 +54,18 @@ steps:
               $ModuleMapping.Keys | ForEach-Object {
                   $ModuleName = $_
                   $ModulePath = "$(System.DefaultWorkingDirectory)/src/$ModuleName/$ApiVersion"
-                  if (Test-Path $ModulePath) {
-                    $ModulePsd1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psd1" -Resolve
-                    $ModulePsm1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psm1" -Resolve
-                    ($ModulePsd1 | Get-AuthenticodeSignature).Status | Should -Be "Valid"
-                    ($ModulePsm1 | Get-AuthenticodeSignature).Status | Should -Be "Valid"
+                  Write-Host "Checking path: $ModulePath"
+                  $ModulePsd1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psd1" -Resolve
+                  $ModulePsm1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psm1" -Resolve
+                  Write-Host "Validating Authenticode Signature for $ModulePsd1"
+                  Write-Host "Validating Authenticode Signature for $ModulePsm1"
+                  if ((Test-Path $ModulePsd1) -and (Test-Path $ModulePsm1)) {
+                    $ModulePsd1AuthCodeSignature = $ModulePsd1 | Get-AuthenticodeSignature
+                    $ModulePsm1AuthCodeSignature = $ModulePsm1 | Get-AuthenticodeSignature
+                    Write-Host "Authenticode Signature for $ModulePsd1 is $($ModulePsd1AuthCodeSignature.Status)"
+                    Write-Host "Authenticode Signature for $ModulePsm1 is $($ModulePsm1AuthCodeSignature.Status)"
+                    $ModulePsd1AuthCodeSignature.Status | Should -Be "Valid"
+                    $ModulePsm1AuthCodeSignature.Status | Should -Be "Valid"
                   }
               }
             }
