--- a/.azure-pipelines/generation-templates/workload-modules.yml
+++ b/.azure-pipelines/generation-templates/workload-modules.yml
@@ -54,9 +54,8 @@ steps:
               $ModuleMapping.Keys | ForEach-Object {
                   $ModuleName = $_
                   $ModulePath = "$(System.DefaultWorkingDirectory)/src/$ModuleName/$ApiVersion"
-                  Write-Host "Checking path: $ModulePath"
-                  $ModulePsd1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psd1" -Resolve
-                  $ModulePsm1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psm1" -Resolve
+                  $ModulePsd1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psd1"
+                  $ModulePsm1 = Join-Path $ModulePath "Microsoft.Graph*.$ModuleName.psm1"
                   Write-Host "Validating Authenticode Signature for $ModulePsd1"
                   Write-Host "Validating Authenticode Signature for $ModulePsm1"
                   if ((Test-Path $ModulePsd1) -and (Test-Path $ModulePsm1)) {
