--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -40,6 +40,7 @@ jobs:
     steps:
       - template: ./common-templates/install-tools.yml
       - template: ./common-templates/security-pre-checks.yml
+      - template: ./common-templates/guardian-analyzer.yml
 
       - template: ./generation-templates/authentication-module.yml
         parameters:
